# image-sidecar-rust

./: .gitattributes  .gitignore  Cargo.toml  HANDOFF.md  IMPLEMENTATION_GUIDE.md  LICENSE  Makefile  QUICK_REFERENCE.md  README.md  RELEASE_MANAGEMENT.md  REQUIREMENTS_ANALYSIS.md  REQUIREMENTS_COMPLIANCE_REPORT.md  REQUIREMENTS_IMAGE_SIDECAR_RUST.sdoc  benchmark_performance.sh  comprehensive_benchmark.sh  content_validation_test.sh  coverage.xml  direct_benchmark.sh  final_roundtrip_test.sh  image_sidecar_rust.py  integrate_rust_sidecar.sh  pyproject.toml  release.py  roundtrip_test.sh  roundtrip_test_v2.sh  setup.cfg  setup.py  simple_benchmark.sh  simple_roundtrip_test.sh  tag_release.sh  test_all_requirements.py
benches/: comprehensive_benchmarks.rs  json_validation.rs
examples/: batch_file_processing.py  format_size_comparison.py  parallel_processing_demo.py  real_format_comparison.py
python/image_sidecar_rust/: core.py
python/sportball_sidecar_rust/: __init__.py  _version.py  core.py
src/: lib.rs  main.rs  python.rs
src/parallel/: mod.rs  processor.rs
src/sidecar/: formats.rs  manager.rs  mod.rs  operations.rs  types.rs
src/utils/: json.rs  mod.rs
test_venv/: pyvenv.cfg
tests/: integration_tests.rs  test_python_bindings.py
