[package]
name = "sportball-sidecar-rust"
version = "0.1.0"
edition = "2021"
authors = ["Sportball Team"]
description = "High-performance Rust implementation for sportball JSON sidecar operations"
license = "MIT"

[lib]
name = "sportball_sidecar_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.7"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
# Binary serialization support
bincode = "1.3"
rkyv = { version = "0.7", features = ["std"] }
rkyv_dyn = "0.7"
bytecheck = "0.6"
# Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"], optional = true }

[features]
default = []
python = ["pyo3"]

[dev-dependencies]
tempfile = "3.0"
criterion = "0.5"

[[bench]]
name = "json_validation"
harness = false

[[bench]]
name = "comprehensive_benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
